--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-dom": "^17.0.2",
+    "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
